--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,9 @@
+=== master
+
+* Use a Railtie if used in a Rails app
+* Include table name in no_bitmask scope
+* Ruby 1.8.7 support
+
 === Version 0.3.0 - 2012-04-30 21:36:18 +0100
 
 Aaron Hamid (1):
